msm_kcal_ctrl: initial code for generic MSM LCD temperature calibrations
this should be compatible with all MDP devices from Qualcomm

Signed-off-by: Paul Reioux <reioux@gmail.com>

MSM KCAL: add sRGB LUT for better color space profiling

Signed-off-by: Paul Reioux <reioux@gmail.com>
Signed-off-by: franciscofranco <franciscofranco.1990@gmail.com>

MSM KCAL: add lut edit capability

Signed-off-by: Paul Reioux <reioux@gmail.com>
Signed-off-by: franciscofranco <franciscofranco.1990@gmail.com>

MSM KCAL: add checksum and data integrity checks

Signed-off-by: Paul Reioux <reioux@gmail.com>
Signed-off-by: franciscofranco <franciscofranco.1990@gmail.com>

MSM KCAL: add reset lut capability

Signed-off-by: Paul Reioux <reioux@gmail.com>
Signed-off-by: franciscofranco <franciscofranco.1990@gmail.com>

msm_kcal: add late resume drivers to autoload the lut

Signed-off-by: Paul Reioux <reioux@gmail.com>
Signed-off-by: franciscofranco <franciscofranco.1990@gmail.com>

msm_kcal: update early suspend to resume last

Signed-off-by: Paul Reioux <reioux@gmail.com>
Signed-off-by: franciscofranco <franciscofranco.1990@gmail.com>

drivers/video/msm: restore update_lcdc_lut capabilities for MDP devices

Signed-off-by: Paul Reioux <reioux@gmail.com>
Signed-off-by: franciscofranco <franciscofranco.1990@gmail.com>

Revert "video: msm: Initialize HistLUT with last saved LUT"

This reverts commit 596d017f93a9b5d479a1edc18a0d21876e0d63a6.

Signed-off-by: franciscofranco <franciscofranco.1990@gmail.com>

Revert "MSM KCAL: add checksum and data integrity checks"

This reverts commit 9f9b9438aebc66a48f0c6508e07adb5d8ac27b78.

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2618,4 +2618,16 @@ config MSM_CPU_PWRCTL
 	  stand alone power collapse operation. Selecting this option
 	  ensures that they are always off.
 
+config UPDATE_LCDC_LUT
+        bool "Set initial Qualcomm LCDC lut"
+        default n
+        help
+          Set initial Qualcomm LCDC Look Up Table.
+
+config LCD_KCAL_STANDALONE
+        tristate "MSM generic LCDC Calibration"
+        default n
+        help
+          Enable MSM generic LCDC temperature Calibration.
+
 endif
