--- a/arch/arm/configs/quanta_defconfig
+++ b/arch/arm/configs/quanta_defconfig
@@ -3719,6 +3719,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_KOI8_R is not set
 # CONFIG_NLS_KOI8_U is not set
 CONFIG_NLS_UTF8=y
+CONFIG_AIO_OPTIMIZATION=y
 
 #
 # Kernel hacking
